crates/carta/tests/snapshots/golden_e2e__mediawiki__html__paragraph-heading-boundary.snap
---
source: crates/carta/tests/golden_e2e.rs
expression: output
---
<p>intro</p>
<h2 id="b_c">b c</h2>
