crates/carta/tests/snapshots/golden_e2e__mediawiki__html__paragraphs.snap
---
source: crates/carta/tests/golden_e2e.rs
expression: output
---
<p>First line second line of same paragraph.</p>
<p>A new paragraph here.</p>
