crates/carta/tests/snapshots/golden_e2e__mediawiki__html__preformatted.snap
---
source: crates/carta/tests/golden_e2e.rs
expression: output
---
<p><code>preformatted line with  spaced gaps</code></p>
