crates/carta/tests/snapshots/golden_e2e__mediawiki__html__raw-html.snap
---
source: crates/carta/tests/golden_e2e.rs
expression: output
---
<p>An <span class="x">inline span</span> stays raw.</p>
