crates/carta/tests/snapshots/golden_e2e__mediawiki__html__ref-multiblock.snap
---
source: crates/carta/tests/golden_e2e.rs
expression: output
---
<p>A statement<a href="#fn1" class="footnote-ref" id="fnref1"
role="doc-noteref"><sup>1</sup></a> with a multi-paragraph footnote.</p>
<section id="footnotes" class="footnotes footnotes-end-of-document"
role="doc-endnotes">
<hr />
<ol>
<li id="fn1"><p>First paragraph of the note.</p>
<p>Second paragraph of the note.<a href="#fnref1" class="footnote-back"
role="doc-backlink">↩︎</a></p></li>
</ol>
</section>
