crates/carta/tests/snapshots/golden_e2e__mediawiki__html__references.snap
---
source: crates/carta/tests/golden_e2e.rs
expression: output
---
<p>A claim<a href="#fn1" class="footnote-ref" id="fnref1"
role="doc-noteref"><sup>1</sup></a> here.</p>
<section id="footnotes" class="footnotes footnotes-end-of-document"
role="doc-endnotes">
<hr />
<ol>
<li id="fn1">The source.<a href="#fnref1" class="footnote-back"
role="doc-backlink">↩︎</a></li>
</ol>
</section>
