crates/carta/tests/snapshots/golden_e2e__mediawiki__html__tab-expansion.snap
---
source: crates/carta/tests/golden_e2e.rs
expression: output
---
<p>a b</p>
<p><code>   indented line</code></p>
