crates/carta/tests/snapshots/golden_e2e__mediawiki__html__table-cell-attrs.snap
---
source: crates/carta/tests/golden_e2e.rs
expression: output
---
<table>
<tbody>
<tr>
<td style="color:red"><p>styled</p></td>
</tr>
<tr>
<td style="text-align: right;"><p>right aligned</p></td>
</tr>
<tr>
<td id="x" class="note"><p>classy</p></td>
</tr>
</tbody>
</table>
