crates/carta/tests/snapshots/golden_e2e__mediawiki__html__templates.snap
---
source: crates/carta/tests/golden_e2e.rs
expression: output
---
<p>Text with an inline reference.</p>
