crates/carta/tests/snapshots/golden_e2e__mediawiki__html__unclosed-verbatim.snap
---
source: crates/carta/tests/golden_e2e.rs
expression: output
---
<p>An unclosed nowiki swallows the rest inline: literal '''text''' and
[[links]] until the end.</p>
<p>And separately, an unclosed pre block:</p>
<pre><code>preformatted content
that has no closing tag
so it runs to the end of input</code></pre>
