crates/carta/tests/snapshots/golden_e2e__mediawiki__html__unterminated-tag.snap
---
source: crates/carta/tests/golden_e2e.rs
expression: output
---
<p>A tag that never closes: &lt;a keeps going as text.</p>
<p>Something that is not a tag at all: &lt;notatag lingers here.</p>
<p>A lone bracket &lt; on its own stays literal.</p>
